--- a/index.html
+++ b/index.html
@@ -1,1 +1,182 @@
-ok
+<!doctype html>
+<html lang="ru">
+<head>
+
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Квартиры посуточно в Краснодаре — фото, цены, карта, бронирование</title>
+<meta name="description" content="Аренда квартир посуточно в Краснодаре: реальные фото, цены за сутки, расположение на карте. Бронирование в Telegram/VK/WhatsApp или по телефону." />
+<link rel="canonical" href="https://example.com/" />
+<meta property="og:title" content="Квартиры посуточно в Краснодаре — фото, цены, карта, бронирование" />
+<meta property="og:description" content="Аренда квартир посуточно в Краснодаре: реальные фото, цены за сутки, расположение на карте. Бронирование в Telegram/VK/WhatsApp или по телефону." />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://example.com/" />
+<meta property="og:image" content="https://example.com/assets/og.jpg" />
+<meta name="twitter:card" content="summary_large_image" />
+<link rel="icon" href="/assets/favicon.png" />
+<link rel="stylesheet" href="/styles.css" />
+
+<link rel="preconnect" href="https://unpkg.com">
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+
+
+<script>window.__PAGE='index';</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"LocalBusiness","name":"Квартиры посуточно — Краснодар","areaServed":"Краснодар","telephone":"+79184417070","url":"https://example.com/","sameAs":["https://t.me/krdkrdkrasnodar","https://vk.ru/foxredfox","https://www.avito.ru/brands/i4864267?src=sharing"]}</script>
+</head>
+<body>
+<header class="header">
+  <div class="container header__row">
+    <a class="brand" href="/">
+      <div class="brand__logo">🏠</div>
+      <div class="brand__text">
+        <div class="brand__title">Квартиры посуточно</div>
+        <div class="brand__sub">Краснодар • Посуточно • 24/7</div>
+      </div>
+    </a>
+    <div class="header__cta">
+      <a class="btn btn--ghost" href="https://www.avito.ru/brands/i4864267?src=sharing" target="_blank" rel="noreferrer">Avito</a>
+      <a class="btn btn--ghost" href="https://t.me/krdkrdkrasnodar" target="_blank" rel="noreferrer">Telegram</a>
+      <a class="btn" href="tel:+79184417070">Позвонить</a>
+    </div>
+  </div>
+</header>
+
+<main>
+
+<section class="hero">
+  <div class="container hero__grid">
+    <div>
+      <h1>Квартиры посуточно в Краснодар</h1>
+      <p class="muted">Фото, цены, карта и быстрые кнопки брони. Мы на связи 24/7.</p>
+      <div class="quick">
+        <a class="btn btn--tg" href="https://t.me/krdkrdkrasnodar" target="_blank" rel="noreferrer">Telegram</a>
+        <a class="btn btn--vk" href="https://vk.ru/foxredfox" target="_blank" rel="noreferrer">VK</a>
+        <a class="btn btn--call" href="tel:+79184417070">Позвонить</a>
+      </div>
+      <div class="chips">
+        <span class="chip">Самозаселение</span>
+        <span class="chip">Отчётные документы</span>
+        <span class="chip">Чистое бельё</span>
+        <span class="chip">Поддержка 24/7</span>
+      </div>
+    </div>
+    <div class="hero__card">
+      <div class="hero__cardTop">
+        <div class="kpi">
+          <div class="kpi__num" id="kpiCount">1</div>
+          <div class="kpi__label">квартир в каталоге</div>
+        </div>
+        <div class="kpi">
+          <div class="kpi__num">Краснодар</div>
+          <div class="kpi__label">город</div>
+        </div>
+      </div>
+      <div class="hero__note">Добавляйте квартиры через админку. На сайте автоматически появятся карточки, точки на карте и отдельные страницы для SEO.</div>
+    </div>
+  </div>
+</section>
+
+<section class="container section">
+  <h2>Подбор</h2>
+  <div class="filters">
+    <input id="q" class="input" placeholder="Поиск: улица, район, ЖК…" />
+    <select id="district" class="input"><option value="">Район: любой</option><option value="Центр">Центр</option></select>
+    <select id="guests" class="input">
+      <option value="">Гостей: любые</option>
+      <option value="1">1+</option>
+      <option value="2">2+</option>
+      <option value="3">3+</option>
+      <option value="4">4+</option>
+      <option value="5">5+</option>
+    </select>
+    <select id="type" class="input">
+      <option value="">Тип: любой</option>
+      <option value="studio">Студия</option>
+      <option value="1k">1к</option>
+      <option value="2k">2к</option>
+      <option value="3k">3к</option>
+    </select>
+    <div class="range">
+      <label class="muted">Цена до: <span id="maxPriceLabel">—</span> ₽/сутки</label>
+      <input id="maxPrice" type="range" min="1000" max="15000" step="500" value="15000" />
+    </div>
+    <label class="check"><input id="onlyFav" type="checkbox" /><span>Только избранное</span></label>
+  </div>
+
+  <div class="grid" id="cards">
+<article class="card" id="apt-001" data-id="apt-001"
+  data-title="Студия в центре • рядом с Красной" data-district="Центр" data-type="studio"
+  data-guests="2" data-price="3200">
+  <a href="/apartments/apt-001/"><img class="card__img" src="/assets/uploads/demo1.jpg" alt="Студия в центре • рядом с Красной" loading="lazy"></a>
+  <div class="card__body">
+    <div class="card__top">
+      <div>
+        <div style="font-weight:800"><a href="/apartments/apt-001/">Студия в центре • рядом с Красной</a></div>
+        <div class="card__meta">Центр • ул. Красная (ориентир)</div>
+      </div>
+      <div class="price">3 200 ₽/сут</div>
+    </div>
+    <div class="badges"><span class="badge">Хит</span><span class="badge">Самозаселение</span></div>
+    <div class="card__meta">2 гостей • Студия • 28 м²</div>
+    <div class="card__actions">
+      <a class="iconBtn" href="/apartments/apt-001/">Подробнее</a>
+      <a class="iconBtn" href="#" data-book="apt-001">Забронировать</a>
+      <button class="iconBtn iconBtn--fav" data-fav="apt-001">♡</button>
+    </div>
+  </div>
+</article></div>
+  <div class="empty" id="empty" hidden>Ничего не найдено. Попробуй изменить фильтры.</div>
+</section>
+
+<section class="container section" id="map">
+  <h2>Карта</h2>
+  <div class="map" id="mapBox"></div>
+  <p class="muted small">Нажми на метку, чтобы открыть квартиру.</p>
+</section>
+
+<section class="container section" id="lead">
+  <h2>Подобрать квартиру под вас</h2>
+  <p class="muted">Оставь заявку — мы пришлём варианты в мессенджер.</p>
+  <form class="lead" name="lead" method="POST" data-netlify="true">
+    <input type="hidden" name="form-name" value="lead" />
+    <input class="input" name="name" placeholder="Имя" required />
+    <input class="input" name="phone" placeholder="Телефон" required />
+    <input class="input" name="dates" placeholder="Даты (например, 12–15 февраля)" />
+    <input class="input" name="guests" placeholder="Сколько гостей" />
+    <input class="input" name="budget" placeholder="Бюджет до, ₽/сутки" />
+    <textarea class="input" name="comment" rows="3" placeholder="Пожелания (район, парковка, животные…)"></textarea>
+    <button class="btn" type="submit">Отправить заявку</button>
+  </form>
+</section>
+
+<section class="container section">
+  <h2>FAQ</h2>
+  <div class="faq">
+    <details><summary>Во сколько заезд и выезд?</summary><p>Стандартно: заезд с 14:00, выезд до 12:00. Ранний/поздний — по согласованию.</p></details>
+    <details><summary>Можно с животными?</summary><p>В некоторых квартирах — да. Укажи это в заявке.</p></details>
+    <details><summary>Как забронировать?</summary><p>Нажми «Забронировать» у квартиры и напиши даты и количество гостей.</p></details>
+  </div>
+</section>
+
+</main>
+
+<footer class="footer">
+  <div class="container footer__row">
+    <div class="muted small">© 2026 Квартиры посуточно • Краснодар</div>
+    <div class="muted small">
+      <a href="https://t.me/krdkrdkrasnodar" target="_blank" rel="noreferrer">Telegram</a> ·
+      <a href="https://vk.ru/foxredfox" target="_blank" rel="noreferrer">VK</a> ·
+      <a href="https://wa.me/79184417070" target="_blank" rel="noreferrer">WhatsApp</a> ·
+      <a href="tel:+79184417070">+79184417070</a>
+    </div>
+  </div>
+</footer>
+
+<script>
+window.__DATA = {"site":{"city":"Краснодар","brand":"Квартиры посуточно","domain":"","contacts":{"phone":"+79184417070","whatsapp":"https://wa.me/79184417070","telegram":"https://t.me/krdkrdkrasnodar","vk":"https://vk.ru/foxredfox","avito":"https://www.avito.ru/brands/i4864267?src=sharing"},"seo":{"defaultTitle":"Квартиры посуточно в Краснодаре — фото, цены, карта, бронирование","defaultDescription":"Аренда квартир посуточно в Краснодаре: реальные фото, цены за сутки, расположение на карте. Бронирование в Telegram/VK/WhatsApp или по телефону.","ogImage":"/assets/og.jpg"},"map":{"centerLat":45.03547,"centerLng":38.97531,"zoom":12}},"apartments":[{"id":"apt-001","title":"Студия в центре • рядом с Красной","district":"Центр","address":"ул. Красная (ориентир)","type":"studio","guests":2,"beds":"1 двуспальная","area":28,"price":3200,"badges":["Хит","Самозаселение"],"amenities":["Wi‑Fi","Кондиционер","Кухня","Стиральная машина"],"rules":["Без вечеринок","Курение запрещено"],"description":"Уютная студия в центре Краснодара. Чистое бельё, полотенца, быстрый интернет. Подходит для пары или командировки.","photos":["/assets/uploads/demo1.jpg","/assets/uploads/demo2.jpg"],"lat":45.041,"lng":38.976,"checkin":"14:00","checkout":"12:00","deposit":"по договоренности"}]};
+</script>
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+<script src="/client.js"></script>
+
+</body>
+</html>
