--- a/admin/index.html
+++ b/admin/index.html
@@ -1,5 +1,12 @@
 <!doctype html>
-<html>
-<head><meta charset="utf-8"></head>
-<body>Admin</body>
+<html lang="ru">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Админка — квартиры</title>
+</head>
+<body>
+  <script src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+  <script src="https://unpkg.com/decap-cms@3.3.2/dist/decap-cms.js"></script>
+</body>
 </html>
