--- a/apartments/apt-001/index.html
+++ b/apartments/apt-001/index.html
@@ -1,1 +1,136 @@
+<!doctype html>
+<html lang="ru">
+<head>
 
+<meta charset="utf-8" />
+<meta name="viewport" content="width=device-width,initial-scale=1" />
+<title>Студия в центре • рядом с Красной — 3 200 ₽/сутки • Краснодар</title>
+<meta name="description" content="Студия в центре • рядом с Красной. Центр, ул. Красная (ориентир). Цена 3 200 ₽/сутки. Бронирование: Telegram/VK/WhatsApp или звонок." />
+<link rel="canonical" href="https://example.com/apartments/apt-001/" />
+<meta property="og:title" content="Студия в центре • рядом с Красной — 3 200 ₽/сутки • Краснодар" />
+<meta property="og:description" content="Студия в центре • рядом с Красной. Центр, ул. Красная (ориентир). Цена 3 200 ₽/сутки. Бронирование: Telegram/VK/WhatsApp или звонок." />
+<meta property="og:type" content="website" />
+<meta property="og:url" content="https://example.com/apartments/apt-001/" />
+<meta property="og:image" content="https://example.com/assets/uploads/demo1.jpg" />
+<meta name="twitter:card" content="summary_large_image" />
+<link rel="icon" href="/assets/favicon.png" />
+<link rel="stylesheet" href="/styles.css" />
+
+<link rel="preconnect" href="https://unpkg.com">
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" />
+
+
+<script>window.__PAGE='apartment';</script>
+<script type="application/ld+json">{"@context":"https://schema.org","@type":"LodgingBusiness","name":"Студия в центре • рядом с Красной","url":"https://example.com/apartments/apt-001/","telephone":"+79184417070","address":{"@type":"PostalAddress","addressLocality":"Краснодар","streetAddress":"ул. Красная (ориентир)"},"geo":{"@type":"GeoCoordinates","latitude":45.041,"longitude":38.976},"makesOffer":{"@type":"Offer","price":"3200","priceCurrency":"RUB","url":"https://example.com/apartments/apt-001/","availability":"https://schema.org/InStock"}}</script>
+</head>
+<body>
+<header class="header">
+  <div class="container header__row">
+    <a class="brand" href="/">
+      <div class="brand__logo">🏠</div>
+      <div class="brand__text">
+        <div class="brand__title">Квартиры посуточно</div>
+        <div class="brand__sub">Краснодар • Посуточно • 24/7</div>
+      </div>
+    </a>
+    <div class="header__cta">
+      <a class="btn btn--ghost" href="https://www.avito.ru/brands/i4864267?src=sharing" target="_blank" rel="noreferrer">Avito</a>
+      <a class="btn btn--ghost" href="https://t.me/krdkrdkrasnodar" target="_blank" rel="noreferrer">Telegram</a>
+      <a class="btn" href="tel:+79184417070">Позвонить</a>
+    </div>
+  </div>
+</header>
+
+<main>
+
+<section class="container section">
+  <div class="breadcrumbs"><a href="/">Главная</a> → <span>Студия в центре • рядом с Красной</span></div>
+  <h1 style="margin-top:10px">Студия в центре • рядом с Красной</h1>
+  <p class="muted">Центр • ул. Красная (ориентир)</p>
+
+  <div class="apartment__grid">
+    <div>
+      <div class="gallery"><img src="/assets/uploads/demo1.jpg" alt="Студия в центре • рядом с Красной" loading="lazy"><img src="/assets/uploads/demo2.jpg" alt="Студия в центре • рядом с Красной" loading="lazy"></div>
+      <div class="panel" style="margin-top:12px">
+        <h2 style="margin-top:0">Описание</h2>
+        <p class="muted" style="white-space:pre-wrap">Уютная студия в центре Краснодара. Чистое бельё, полотенца, быстрый интернет. Подходит для пары или командировки.</p>
+      </div>
+
+      <div class="kv">
+        <div class="panel">
+          <div style="font-weight:800">Удобства</div>
+          <ul class="list"><li>Wi‑Fi</li><li>Кондиционер</li><li>Кухня</li><li>Стиральная машина</li></ul>
+        </div>
+        <div class="panel">
+          <div style="font-weight:800">Правила</div>
+          <ul class="list"><li>Без вечеринок</li><li>Курение запрещено</li></ul>
+        </div>
+      </div>
+
+      <div class="panel" style="margin-top:12px">
+        <div style="font-weight:800">Расположение</div>
+        <div class="map" id="aptMap" style="margin-top:10px;height:320px"></div>
+        <div class="muted small" style="margin-top:8px">Карта OpenStreetMap. Нажми «Маршрут», чтобы открыть навигацию.</div>
+      </div>
+    </div>
+
+    <aside>
+      <div class="panel">
+        <div style="display:flex;justify-content:space-between;gap:10px;align-items:start">
+          <div>
+            <div class="muted small">Цена</div>
+            <div style="font-size:28px;font-weight:900">3 200 ₽</div>
+            <div class="muted small">за сутки</div>
+          </div>
+          <button class="iconBtn iconBtn--fav" data-fav="apt-001">♡</button>
+        </div>
+
+        <div style="margin-top:12px" class="muted">
+          <div><b>Гостей:</b> 2</div>
+          <div><b>Спальные места:</b> 1 двуспальная</div>
+          <div><b>Площадь:</b> 28 м²</div>
+          <div><b>Заезд:</b> 14:00</div>
+          <div><b>Выезд:</b> 12:00</div>
+          <div><b>Залог:</b> по договоренности</div>
+        </div>
+
+        <div style="margin-top:14px;display:flex;flex-direction:column;gap:8px">
+          <a class="btn btn--tg" href="https://t.me/krdkrdkrasnodar?text=%D0%97%D0%B4%D1%80%D0%B0%D0%B2%D1%81%D1%82%D0%B2%D1%83%D0%B9%D1%82%D0%B5!%20%D0%A5%D0%BE%D1%87%D1%83%20%D0%B7%D0%B0%D0%B1%D1%80%D0%BE%D0%BD%D0%B8%D1%80%D0%BE%D0%B2%D0%B0%D1%82%D1%8C%3A%20%D0%A1%D1%82%D1%83%D0%B4%D0%B8%D1%8F%20%D0%B2%20%D1%86%D0%B5%D0%BD%D1%82%D1%80%D0%B5%20%E2%80%A2%20%D1%80%D1%8F%D0%B4%D0%BE%D0%BC%20%D1%81%20%D0%9A%D1%80%D0%B0%D1%81%D0%BD%D0%BE%D0%B9.%20%D0%94%D0%B0%D1%82%D1%8B%3A%20__%20%2F%20__.%20%D0%93%D0%BE%D1%81%D1%82%D0%B5%D0%B9%3A%20__.%20%D0%A1%D1%81%D1%8B%D0%BB%D0%BA%D0%B0%3A%20https%3A%2F%2Fexample.com%2Fapartments%2Fapt-001%2F" target="_blank" rel="noreferrer">Забронировать в Telegram</a>
+          <a class="btn btn--vk" href="https://vk.ru/foxredfox" target="_blank" rel="noreferrer">Написать в VK</a>
+          <a class="btn btn--call" href="tel:+79184417070" target="_self">Позвонить</a>
+          <a class="btn btn--ghost" href="https://wa.me/79184417070" target="_blank" rel="noreferrer">WhatsApp</a>
+          <a class="btn btn--ghost" href="https://www.google.com/maps/dir/?api=1&destination=45.041,38.976" target="_blank" rel="noreferrer">Маршрут</a>
+        </div>
+      </div>
+
+      <div class="panel" style="margin-top:12px">
+        <div style="font-weight:800">Нужен другой вариант?</div>
+        <p class="muted">Напиши бюджет и район — подберём похожие квартиры.</p>
+        <a class="btn" href="/#lead">Оставить заявку</a>
+      </div>
+    </aside>
+  </div>
+</section>
+
+</main>
+
+<footer class="footer">
+  <div class="container footer__row">
+    <div class="muted small">© 2026 Квартиры посуточно • Краснодар</div>
+    <div class="muted small">
+      <a href="https://t.me/krdkrdkrasnodar" target="_blank" rel="noreferrer">Telegram</a> ·
+      <a href="https://vk.ru/foxredfox" target="_blank" rel="noreferrer">VK</a> ·
+      <a href="https://wa.me/79184417070" target="_blank" rel="noreferrer">WhatsApp</a> ·
+      <a href="tel:+79184417070">+79184417070</a>
+    </div>
+  </div>
+</footer>
+
+<script>
+window.__DATA = {"site":{"city":"Краснодар","brand":"Квартиры посуточно","domain":"","contacts":{"phone":"+79184417070","whatsapp":"https://wa.me/79184417070","telegram":"https://t.me/krdkrdkrasnodar","vk":"https://vk.ru/foxredfox","avito":"https://www.avito.ru/brands/i4864267?src=sharing"},"seo":{"defaultTitle":"Квартиры посуточно в Краснодаре — фото, цены, карта, бронирование","defaultDescription":"Аренда квартир посуточно в Краснодаре: реальные фото, цены за сутки, расположение на карте. Бронирование в Telegram/VK/WhatsApp или по телефону.","ogImage":"/assets/og.jpg"},"map":{"centerLat":45.03547,"centerLng":38.97531,"zoom":12}},"apartment":{"id":"apt-001","title":"Студия в центре • рядом с Красной","district":"Центр","address":"ул. Красная (ориентир)","type":"studio","guests":2,"beds":"1 двуспальная","area":28,"price":3200,"badges":["Хит","Самозаселение"],"amenities":["Wi‑Fi","Кондиционер","Кухня","Стиральная машина"],"rules":["Без вечеринок","Курение запрещено"],"description":"Уютная студия в центре Краснодара. Чистое бельё, полотенца, быстрый интернет. Подходит для пары или командировки.","photos":["/assets/uploads/demo1.jpg","/assets/uploads/demo2.jpg"],"lat":45.041,"lng":38.976,"checkin":"14:00","checkout":"12:00","deposit":"по договоренности"}};
+</script>
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
+<script src="/client.js"></script>
+
+</body>
+</html>
