--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 <section class="container section" id="lead">
   <h2>Подобрать квартиру под вас</h2>
   <p class="muted">Оставь заявку — мы пришлём варианты в мессенджер.</p>
-  <form class="lead" name="lead" method="POST" data-netlify="true">
+  <form class="lead" name="lead" method="POST" data-netlify="true" action="/thanks.html">
     <input type="hidden" name="form-name" value="lead" />
     <input class="input" name="name" placeholder="Имя" required />
     <input class="input" name="phone" placeholder="Телефон" required />
